# bounded-num

./: Cargo.toml
src/: bounded_num.rs  conv.rs  indexing.rs  lib.rs  ops.rs  representable.rs
tests/: conv.rs  indexing.rs  ops.rs
tests/compile_fail/conv/: u8_invalid_into.rs  u8_invalid_into.stderr
tests/compile_fail/indexing/: get_safe_index_oob.rs  get_safe_index_oob.stderr  get_safe_mut_index_oob.rs  get_safe_mut_index_oob.stderr
tests/compile_fail/ops/add/: u8_invalid_add.rs  u8_invalid_add.stderr
